changes in index

--- a/index.html
+++ b/index.html
@@ -27,10 +27,6 @@
         <p>This is child 3 Z=0</p>
       </div> -->
 
-      <div class="child-div-4">
-        <p>This is child 4 Z=1</p>
-      </div>
-
       <div class="child-div-5">
         <p>This is child 5 Z=2</p>
       </div>
@@ -39,6 +35,18 @@
         <p>This is child 6 Z=0</p>
       </div>
 
+      <div class="child-div">
+        <!-- Absolute dia hua hai -->
+        <p>This is child Z=0</p>
+      </div>
+      <div class="child-div">
+        <!-- Absolute dia hua hai -->
+        <p>This is child Z=0</p>
+      </div>
+      <div class="child-div">
+        <!-- Absolute dia hua hai -->
+        <p>This is child Z=0</p>
+      </div>
       <div class="child-div">
         <!-- Absolute dia hua hai -->
         <p>This is child Z=0</p>
